--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <canvas style="position: absolute; top:0; left: 0;" id="onionSkinCanvas" width="600" height="600"></canvas>
             <canvas style="position: absolute; top:0; left: 0; opacity: 0.9;" id="drawCanvas" width="600" height="600"></canvas>
         </div>
-        <div>
+        <div class="ccContainer">
             <canvas data-enabled="false" class="cc selected" width="600" height="600"></canvas>
             <canvas data-enabled="false" class="cc" width="600" height="600"></canvas>
             <canvas data-enabled="false" class="cc" width="600" height="600"></canvas>
@@ -43,7 +43,6 @@
             <canvas data-enabled="false" class="cc" width="600" height="600"></canvas>
             <canvas data-enabled="false" class="cc" width="600" height="600"></canvas>
             <canvas data-enabled="false" class="cc" width="600" height="600"></canvas>
-
         </div>
         <div>
         </div>
